# Express-AI-Rag-Base-2025

./: README.md  express_ai_rag_base_2025.ipynb  pyproject.toml  rag_in_practice.ipynb
data/: da_vinci.txt  henry_david_thoreau.txt
