[project]
name = "rag-in-practice-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.14.0",
    "jupyter>=1.1.1",
    "langchain-cohere>=0.4.3",
    "langchain-nvidia-ai-endpoints>=0.3.9",
    "langchain-qdrant>=0.2.0",
    "langchain-together>=0.3.0",
    "langgraph>=0.3.20",
    "langsmith>=0.3.18",
    "qdrant-client>=1.13.3",
    "ragas>=0.2.14",
    "rank-bm25>=0.2.2",
]
